--- a/reservation.html
+++ b/reservation.html
@@ -26,7 +26,7 @@
     <section class="header-img">
         <header class="header-main">
             <nav class="nav-main">
-                <h1 class="main-title"><a href="#">King of Spices</a></h1>
+                <h1 class="main-title"><a href="#">Crif Spices</a></h1>
                 <div class="openMenu"><i class="fa-solid fa-bars" style="color: #ff9d2e;"></i></div>
                 <ul class="nav-ul">
                     <li><a href="index.html">Home</a></li>
