--- a/about.html
+++ b/about.html
@@ -146,9 +146,9 @@
             <div class="footer-col">
                 <h4 class="footer-title">follow us</h4>
                 <div class="social-links">
-                    <a href="#" title="FaceBook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://web.facebook.com/profile.php?id=100041014868392" title="FaceBook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/CrifFad" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/dharmhorlah/" title="Instagram"><i class="fab fa-instagram"></i></a>
                     <!-- <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
