--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crif Spices | Burgers, Pizza, Nigerian Food & Non-veg Cuisine</title>
 
-    <!-- favicon -->
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-
     <!-- external css -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- javascript file -->
     <script src="./assets/js/script.js" defer></script>
 
-    <!-- Font Awesome link -->
+    <!-- Font -->
     <script src="https://kit.fontawesome.com/5289663089.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
     <!-- Header Section -->
     <section class="header-img">
         <header class="header-main">
@@ -38,7 +34,7 @@
 
         <div class="header-context">
             <h1>Crif Spices</h1>
-            <h3 style="text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;"><span style="color: #FF8C00;">Burgers, Pizza, </span><span style="color: #33c933;">Nigerian</span> <span style="color: #FF8C00;">Food</span></span><span style="color: white;"> </span><span style="color: #FF0000;"></span></h3>
+            <h3 style="text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;"><span style="color: #FF8C00;">Burgers, Pizza </span><span style="color: #33c933;">& Nigerian</span> <span style="color: #FF8C00;">Food</span></span><span style="color: white;"> </span><span style="color: #FF0000;"></span></h3>
         </div>
     </section>
 
@@ -337,8 +333,8 @@
     
                     <div class="col">
                         <div class="testimonial">
-                            <img src="./assets/images/logo.jpg" alt="Crif">
-                            <div class="name">Crif Fad<br>CEO @crif Spices
+                            <img src="./assets/images/budo.png" alt="Crif">
+                            <div class="name">Subair Abdullah<br>CEO @crif Spices
                             </div>
                                 <hr>
                             <div class="star">
@@ -348,7 +344,7 @@
                                 <i class="fa-sharp fa-solid fa-star"></i>
                                 <i class="fa-sharp fa-solid fa-star"></i>
                             </div>
-                            <h4>"The Food we enjoyed at the time of dinner was was really a delicious one with great
+                            <h4>"The Food we enjoyed at the time of dinner was really a delicious one with great
                                 quality, everything had a unique taste, nice arrangement and services
                                 from the staff."</h4>
                         </div>
@@ -384,9 +380,9 @@
             <div class="footer-col">
                 <h4 class="footer-title">follow us</h4>
                 <div class="social-links">
-                    <a href="#" title="FaceBook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://web.facebook.com/profile.php?id=100041014868392" title="facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/CrifFad" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/dharmhorlah/" title="instagram"><i class="fab fa-instagram"></i></a>
                     <!-- <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
