--- a/reservation.html
+++ b/reservation.html
@@ -46,9 +46,9 @@
                     reservation. Our reservation system is quick and easy - simply fill out the form below with your
                     preferred
                     date and time, and we will confirm your booking via email or phone.</p>
-                <h2>Special Requests</h2>
+                <!-- <h2>Special Requests</h2>
                 <p>If you have any special requests, please let us know in advance. Our team will do their best to
-                    accommodate your needs and ensure that you have a comfortable and enjoyable dining experience.</p>
+                    accommodate your needs and ensure that you have a comfortable and enjoyable dining experience.</p> -->
             </div>
             <div class="table-container">
                 <form name="reservation-form">
@@ -64,7 +64,7 @@
                         </div>
                         <div class="input-box">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" placeholder="Enter phone number" name="phone" pattern="[0-9]{10}" required>
+                            <input type="tel" placeholder="Enter phone number" name="phone" pattern="[0-9]{11}" required>
                         </div>
                         <div class="input-box">
                             <label for="date">Date</label>
@@ -87,5 +87,11 @@
             </div>
         </div>
     </section>
+
+        
+        <div class="footer-copyright" style="background-color: grey;">
+            <h3>Copyright ©️ 2024 | <a href="https://github.com/Alkaison/King-of-Spices" title="King of Spices GitHub Repo">Crif Spices</a> | All rights reserved.</h3>
+        </div>
+    </footer>
 </body>
 </html>
